docs/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Sacramento&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    background-color: #051336;
    color: #eee;
    font-family: 'Montserrat', sans-serif;
}

header{
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1{
    font-size: 5rem;
    font-family: 'Sacramento', sans-serif;
    font-weight: normal;
    text-align: center;
    color: #fff;
    line-height: 8rem;
    margin-top: 0.4rem;
}

h3{
    font-size: 1.5rem;
    margin-top: -1rem;
}

h1, h3{
    text-shadow:
      0 0 7px #fff,
      0 0 10px #fff,
      0 0 21px #8af,
      0 0 42px #8af,
      0 0 70px #abf;
}

.wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 4rem 2rem 2rem 2rem;
}

.wrapper > div{
    width: 100%;
    max-width: 800px;
    margin-bottom: 1rem;
}

.wrapper > div h2{
    font-size: 2rem;
    border-bottom: 2px solid #eee;
}

#sobre p{
    font-size: 1.15rem;
    padding: 1rem;
}

#habilidades div, #projetos div, #contato div{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    margin: 1rem 0;
}

.imgicon{
    width: 7rem;
    cursor: pointer;
}

.imgicon, .card{
    transition: 300ms transform;
}

.imgicon:hover, .card:hover{
    transform: scale(1.1);
}

.card{
    width: 15rem;
    background-color: #115;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0px 0.3rem 0.6rem #111;
}

.card a{
    text-decoration: none;
    color: #eee;
}

.card img{
    width: 100%;
    height: 10rem;
    object-fit: cover;
}

.card h4{
    font-size: 1.2rem;
    text-align: center;
}

.card p, .card h4{
    text-align: center;
    padding: 0.2rem 0.1rem;
}

footer{
    height: 2.5rem;
    display: flex;
    align-items: center;
    border-top: 2px solid #eee;
    background-color: #115;
}

footer p{
    width: 100%;
    text-align: center;
    font-size: 1.1rem;
}

@media only screen and (max-width: 480px){
    h1{
        font-size: 3.5rem;
    }
}

